@@ -1,3 +1,7 @@
+2025-06-15 20:31
+- Fixed a bug where total number of stats was larger than available stats
+- Updated API import for Space Station 
+
 2025-06-15 19:03
 - Adapted coded to new squadron buffs. API import will be fixed in another moment
 
